@@ -1,5 +1,12 @@
 2005-01-31  Christopher Faylor  <cgf@timesys.com>
 
+	* path.h (path_conv::set_name): Declare new function.
+	* path.cc (path_conv::set_name): Define new function.
+	* fhandler.h (fhandler_dev_null::open): Declare new function.
+	* fhandler.cc (fhandler_dev_null::open): Define new function.
+
+2005-01-31  Christopher Faylor  <cgf@timesys.com>
+
 	* smallprint.c (rnarg): Use long rather than unsigned long so that we
 	get proper sign extension.
 
